fixed footer left-align

--- a/scope-style/style.css
+++ b/scope-style/style.css
@@ -163,7 +163,7 @@ body{
     margin-right: 1px;
     float: left;
     position: relative;
-    left: calc(50% - ( 3 / 2.0 ) * 32px);
+    left: calc(50% - ( 2 / 2.0 ) * 32px);
     cursor: pointer;
     /*License images are 30x30px + 1px left & right margins = 32px wide*/
     /*To horizontally center icons on page:*/
